2003-02-15  ------ omnetpp-2.3b1 released ------

2003-02-14  Andras Varga

	* no limit on ned file line length

2003-01-30  Andras Varga

	* changed connection drawing: now default mode is "auto", then if user
	insists on exact placement by dragging the arrow, it changes to 
	"manual" mode. 
	
	* fixed bug that it always created display strings for connections
	[hint from Steffen Sroka].

	* double click on a submodule which is a simple module now opens 
	module properties dialog

	* increased default size of enclosing module rectangle

2003-01-19  Andras Varga

	* Cygwin fixes; put checkTckTkVersion and setupTkOptions (was generic_-
	bindings) into widgets.tcl

2003-01-12  Andras Varga

	* tree view improved

2003-01-11  Andras Varga

	* main.tcl: appearance of menus on Unix made more contemporary 
	(via option add's)

2003-01-04  Andras Varga

	* props.tcl: Module/Submodule/etc Properties dialogs now validate 
	values entered in the Parameters, Gates, Machines etc. tables, 
	so that invalid values no longer cause errors. (new proc validate-
	AttrValue)

2002-12-03  Andras Varga

	* plotedit.tcl: bugfix: it was not possible to draw exactly horizontal 
	or vertical connection arrows

	* drawopts.tcl: bugfix: Tcl error when icon in loaded NED file was not 
	found

2002-11-28  Andras Varga

	* drawopts.tcl: icon selection dialog improved

2002-11-12 Andras Varga

	* ported to Tk8.4 (several 'char *' to 'const char *' changes)

2002-11-04  Andras Varga

	* ebnf.y: synchronized with nedc

2002-05-04  ------ omnetpp-2.2 released ------

2002-04-06  Andras Varga

	* main.tcl: Fix for Cygwin: checkVersion complained about tk_patchLevel
        '8.0.4'. (In earlier versions, tk_patchLevel had the format '8.0p4').

        * *.tcl: puts "dbg: ..." statements replaced by a debug procedure, with
        debugging currently turned off.

2002-02-29  Andras Varga

	* findrepl.tcl: implemented backwards search/replace

2002-02-24  Andras Varga
